plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
	//maven { url = 'https://repo.spring.io/milestone' } // For Spring AI milestone releases
}
dependencyManagement {
	imports {
        // Manages the Spring AI BOM dependencies
		mavenBom "org.springframework.ai:spring-ai-bom:1.0.0"
	}
}
dependencies {
    // Spring-boot Dependencies
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'

    // AI Dependencies
	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'

    // Database Dependencies
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql'

    // Security Dependencies
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Lombok Dependencies
    compileOnly 'org.projectlombok:lombok:1.18.32' // latest as of 2025
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Other Dependencies
    implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0' // (Furigana generation)


	// DevTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

jar {
        archiveFileName = 'languagelearning.jar'
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:deprecation"
}
